cmake_minimum_required(VERSION 2.6)
add_subdirectory(MultiPSSim)
IF (CAEN2527)
  FILE(REMOVE CAEN2527/UnitServerIgnore)
  add_subdirectory(CAEN2527)
  ELSE()
    FILE(WRITE CAEN2527/UnitServerIgnore "disabled ${PROJECT_NAME}")
    MESSAGE(STATUS "Disabling compilation of CAEN2527")
  ENDIF()
SET(DRIVERS_LIB ${DRIVERS_LIB} PARENT_SCOPE)
