cmake_minimum_required(VERSION 2.8)
project(chaos_driver_multichannelpowersupply_MultiPSSim)
FILE(GLOB src *.cpp)
ADD_LIBRARY(${PROJECT_NAME} ${src})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} common_multichannelpowersupply_MultiPSSim)
SET (DRIVERS_LIB ${DRIVERS_LIB} ${PROJECT_NAME} PARENT_SCOPE)
FILE(GLOB src *.h)
FILE(GLOB files "*.h")
INSTALL(FILES ${files} DESTINATION include/driver/multichannelpowersupply/models/MultiPSSim/)
INSTALL_TARGETS(/lib ${PROJECT_NAME})
